--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "concurrently": "^6.1.0",
+    "jest": "^27.2.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
   }
