--- a/package.json
+++ b/package.json
@@ -34,16 +34,23 @@
     "multer": "^1.4.3",
     "node-geocoder": "^3.27.0",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "request": "^2.81.0",
     "rimraf": "^3.0.2",
     "slugify": "^1.6.0",
     "unirest": "^0.6.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "concurrently": "^6.1.0",
-    "jest": "^27.2.0",
+    "jest": "^27.2.2",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "superagent": "^6.1.0",
+    "supertest": "^6.1.6"
   }
 }
